--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,8 @@ extends:
   - eslint:recommended
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
+  - plugin:react/jsx-runtime
+  - plugin:react-hooks/recommended
 overrides: []
 parser: "@typescript-eslint/parser"
 parserOptions:
